Fix: scrollbar

--- a/src/components/AssistantVA/VAHome/Clock.module.scss
+++ b/src/components/AssistantVA/VAHome/Clock.module.scss
@@ -1,27 +1,17 @@
 @import url('https://fonts.googleapis.com/css2?family=Orbitron:wght@600;700&display=swap');
 
-.digital_con {
-    display: flex;
-    flex-flow: row nowrap;
-}
-
-.digital_con {
-    align-items: center;
-}
-
 .digital {
-    height: 3.5rem;
-    width: 7.2rem;
     background: #714DD9;
-    font-family: 'Orbitron', sans-serif;
+    font-family: 'Orbitron', sans-serif !important;
     font-weight: 600;
-    font-size: 1.5rem;
+    font-size: 1.2rem;
     color: #E9F3F5;
     display: flex;
     align-items: center;
     justify-content: center;
     flex-flow: column;
     border-radius: 0.5rem;
+    padding: 5px 0px;
 }
 
 .day {
